added comment, delet bad file